# madcp

./: .gitignore  CLAUDE.md  LICENSE  MadCP.md  README.md  dashboard.py  pyproject.toml  server.py
.claude/: settings.json
.claude/hooks/: block-dangerous.sh
.github/workflows/: sync-scratch.yml
madhu/: mcp_helpers.py  names.py  naming.py  scheduler.py
madhu/observability/: dashboard_data.py  jsonl.py
madhu/schemas/: envelope.py  payloads.py
madhu/schemas/migrations/: __init__.py  v0_9_to_v1_0.py
madhu/store/: markdown.py  sqlite.py  touch.py
madhu/tiers/: registry.py
madhu/tiers/configs/: adi_purusha.yaml  hamsa.yaml
madhu/workers/: __init__.py  base.py  gemma.py  hamsa.py
madhu/workers/providers/: __init__.py  ollama.py
scratch/: c1.txt  c1_ontology_smoke.py  c2.txt  c2_persistence_smoke.py  c3.txt  c3_scheduler_launcher.py  c3_stage14.txt  c3_worker_pipeline_smoke.py  c4.txt  c4_mcp_loop_smoke.py  stage5rep.txt
tests/: __init__.py  test_dashboard.py  test_dashboard_data.py  test_envelope.py  test_jsonl.py  test_markdown.py  test_mcp_concurrent.py  test_mcp_helpers.py  test_migrations.py  test_naming.py  test_payloads.py  test_scheduler.py  test_scheduler_resilience.py  test_store.py  test_tiers.py  test_touch.py  test_workers.py
