[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "madhu"
version = "0.1.0"
description = "MadCP — madhu: a multi-tier MCP task orchestration server"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0",       # pin to resolved version once stable; check: pip show mcp
    "pydantic>=2.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["madhu"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]